# GenCommAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  search_prompt.py  system_prompt.py
SummarizeAgent/: agents.py  config.py
app/: __init__.py  main.py
app/TopicAgent/: ProductTopic.py  base.py  config.py
app/api/: browsing_agent.py
app/services/: __init__.py  agent.py  openai_service.py  search_youtube_videos.py  tool.py  youtube_link_summarizer.py  youtube_link_transcriber.py  youtube_search.py
font/: Chart.js  index.html
moro/: agents.py  config.json  config.py
