[project]
name = "gencommai"
version = "0.1.0"
description = "A FastAPI-based project"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "openai>=1.3.0",
    "google-api-python-client>=2.170.0",
    "google-generativeai>=0.8.5",
    "youtube-transcript-api>=1.0.3",
    "ag2>=0.9.1.post0",
    "pillow>=11.2.1",
]
